--- a/sitio/index.html
+++ b/sitio/index.html
@@ -105,6 +105,30 @@
         </section>
 
     </main>
+    <footer>
+        <!-- Logo + empresa -->
+        <a href="index.html">
+            <img src="imgs/sunsea-wht.png" alt="Logo Summer Exploring">
+            Summer Exploring
+        </a>
+
+        <!-- redes sociales -->
+        <div>
+            <a href="">
+                <img src="imgs/instagram-w 1.png" alt="Instagram">
+            </a>
+            <a href="">
+                <img src="imgs/facebook-w 1.png" alt="Facebook">
+            </a>
+            <a href="">
+                <img src="imgs/twitter-w 1.png" alt="Twitter">
+            </a>
+            <a href="">
+                <img src="imgs/linkedin-w.png" alt="LinkedIn">
+            </a>
+        </div>
+    </footer>
+
 
 </body>
 </html>
