--- a/sitio/index.html
+++ b/sitio/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="#">Promos</a>
-            <a href="#">Servicios</a>
+            <a href="servicios.html">Servicios</a>
             <a href="#">Contacto</a>
         </nav>    
     </header>
