--- a/sitio/servicios.html
+++ b/sitio/servicios.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="#">Promos</a>
-            <a href="#">Servicios</a>
+            <a href="servicios.html">Servicios</a>
             <a href="#">Contacto</a>
         </nav>    
     </header>
@@ -28,6 +28,47 @@
        <section id="video">
         <iframe src="https://www.youtube.com/embed/_NeXuq3A_PU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        </section>
+
+       <section id="rooms">
+            <article>
+                <img src="imgs/room-1.jpg" alt="Single suite">
+                <div>
+                    <h2>Single Suite</h2>
+                    <span>por noche  $160</span>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptates tenetur atque alias fugit odio, modi, dolor cum fugiat vero ab sapiente rem commodi nihil inventore voluptatibus laboriosam iure id vitae totam!
+                    </p>
+                    <a href="">Reservar</a>
+                </div>
+            </article>
+
+            <article>
+                <img src="imgs/room-2.jpg" alt="Double suite">
+                <div>
+                    <h2>Double Suite</h2>
+                    <span>por noche  $200</span>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptates tenetur atque alias fugit odio, modi, dolor cum fugiat vero ab sapiente rem commodi nihil inventore voluptatibus laboriosam iure id vitae totam!
+                    </p>
+                    <a href="">Reservar</a>
+                </div>
+            </article>
+
+            <article>
+                <img src="imgs/room-3.jpg" alt="Double suite 2">
+                <div>
+                    <h2>Double Suite 2</h2>
+                    <span>por noche  $260</span>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptates tenetur atque alias fugit odio, modi, dolor cum fugiat vero ab sapiente rem commodi nihil inventore voluptatibus laboriosam iure id vitae totam!
+                    </p>
+                    <a href="">Reservar</a>
+                </div>
+            </article>
+
+
+       </section>
+
     </main>
     <footer>
         <!-- Logo + empresa -->
@@ -52,6 +93,8 @@
             </a>
         </div>
     </footer>
+
+    
 
 
 </body>
