--- a/sitio/index.html
+++ b/sitio/index.html
@@ -20,7 +20,7 @@
             <a href="index.html">Inicio</a>
             <a href="#">Promos</a>
             <a href="servicios.html">Servicios</a>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>    
     </header>
 
